--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="quote-container" id="quote-container">
+        <!-- Quote -->
+        
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
