local api script

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <button class="twitter-button" id="twitter" title="tweet this">
             <i class="fa-brands fa-twitter"></i>
         </button>
-        <button class="new-quote">New Quote</button>
+        <button id="new-quote">New Quote</button>
     </div>
     </div>
+
+    <div class="loader" id="loader"></div>
+
     <script src="script.js"></script>
     
   </body>
