--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
       <!-- Quote -->
       <div class="quote-text">
         <i class="fa-solid fa-quote-left"></i>
-      <span id="quote">The things you think about determine the quality of your mind. Your
-        soul takes the color of your thoughts.</span>
+      <span id="quote"></span>
     </div>
     <!-- Author -->
     <div class="quote-author">
-        <span id="author">Budhha</span>
+        <span id="author"></span>
     </div>
     <!-- Buttons -->
     <div class="button-container">
