--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="loader" id="loader"></div>
 
     <script src="script.js"></script>
+    <script src="quote.js"></script>
     
   </body>
 </html>
